// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<a
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  404
</a>
`;

exports[`should render with a link 1`] = `
<a
  href="https://prisme.ai"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  404
</a>
`;

exports[`should render with a reason 1`] = `
<a
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  why not
</a>
`;
